--- a/app/src/main/res/drawable/kakao_layout_shape.xml
+++ b/app/src/main/res/drawable/kakao_layout_shape.xml
@@ -11,7 +11,7 @@
         </shape>
     </item>
 
-    <item android:top="1px" android:bottom="1px">
+    <item android:bottom="1px">
         <shape android:shape="rectangle">
             <stroke android:width="1dp"
                 android:color="#dcdcdc"/>
