--- a/app/src/main/res/layout/kaokao_main.xml
+++ b/app/src/main/res/layout/kaokao_main.xml
@@ -171,7 +171,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@drawable/kakao_layout_shape"
+            android:background="@drawable/toss_line"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
