ADD RecyclerView Delete,Revise

--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -41,7 +42,7 @@
                 android:id="@+id/rerere"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="새로고침" />
+                android:text="광고더하기" />
 
         </LinearLayout>
 
