--- a/app/src/main/res/layout/activity_time_line.xml
+++ b/app/src/main/res/layout/activity_time_line.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <ImageButton
         android:id="@+id/imageButton7"
@@ -258,8 +259,8 @@
 
     <LinearLayout
         android:id="@+id/toss_bottom_menu"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
