--- a/app/src/main/res/layout/activity_toss_lookup.xml
+++ b/app/src/main/res/layout/activity_toss_lookup.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -379,8 +380,8 @@
 
         <LinearLayout
             android:id="@+id/toss_loan"
-            android:layout_width="367dp"
-            android:layout_height="75dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/toss_invest"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="10dp"
@@ -421,8 +422,8 @@
 
         <LinearLayout
             android:id="@+id/toss_credit"
-            android:layout_width="366dp"
-            android:layout_height="76dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="10dp"
             android:background="@drawable/toss_round"
