--- a/app/src/main/res/layout/receiver_item.xml
+++ b/app/src/main/res/layout/receiver_item.xml
@@ -9,7 +9,7 @@
     tools:ignore="UseCompoundDrawables">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
