--- a/app/src/main/res/layout/timeline_item.xml
+++ b/app/src/main/res/layout/timeline_item.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/cl_timeline">
 
     <LinearLayout
         android:id="@+id/linearLayout13"
         android:layout_width="372dp"
-        android:layout_height="49dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
@@ -18,15 +19,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:padding="3dp"
             android:id="@+id/iv_timeline_img"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
             android:background="@android:color/transparent"
             android:src="@drawable/toss" />
 
         <LinearLayout
+            android:layout_marginHorizontal="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -38,12 +40,24 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_timeline_plus_minus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="-"/>
+
+                <TextView
                     android:id="@+id/tv_timeline_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-10,000원"
+                    android:text="10000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="원"/>
 
                 <Space
                     android:layout_width="match_parent"
@@ -51,10 +65,21 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:id="@+id/tv_timeline_time"
+                    android:id="@+id/tv_timeline_hour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12:32"
+                    android:text="12"
+                    android:textSize="18sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":"
+                    android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/tv_timeline_minute"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="32"
                     android:textSize="18sp" />
             </LinearLayout>
 
