--- a/app/src/main/res/layout/activity_time_line.xml
+++ b/app/src/main/res/layout/activity_time_line.xml
@@ -111,30 +111,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/expenditure_contents" />
 
-        <Button
-            android:id="@+id/btn_add_timeline"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:text="내역추가"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calender_view" />
-
-        <TextView
-            android:id="@+id/tv_timeline_date"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/timeline_linear_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:text="9월 25일"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@id/calender_view"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_add_timeline" />
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/tv_timeline_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="9월 25일"
+                android:textSize="20sp"
+                app:layout_constraintHorizontal_bias="0.0"/>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/btn_add_timeline"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginEnd="24dp"
+                android:text="내역추가"
+                app:layout_constraintHorizontal_bias="1.0"/>
+
+        </LinearLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -143,10 +150,21 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_timeline_date"
+            app:layout_constraintTop_toBottomOf="@id/timeline_linear_layout"
+            app:layout_constraintBottom_toTopOf="@id/space_between_recycler_Linear"
             tools:itemCount="3"
             tools:listitem="@layout/timeline_item" />
 
+        <Space
+            android:id="@+id/space_between_recycler_Linear"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            app:layout_constraintTop_toBottomOf="@id/rv_timeline_list"
+            app:layout_constraintBottom_toTopOf="@id/toss_bottom_menu"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            />
 
         <LinearLayout
             android:id="@+id/toss_bottom_menu"
@@ -154,10 +172,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/rv_timeline_list"
+            app:layout_constraintTop_toBottomOf="@id/space_between_recycler_Linear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="0dp"
