--- a/app/src/main/res/layout/toss_sending.xml
+++ b/app/src/main/res/layout/toss_sending.xml
@@ -193,6 +193,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btn_send_complete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
