--- a/app/src/main/res/layout/activity_toss_lookup.xml
+++ b/app/src/main/res/layout/activity_toss_lookup.xml
@@ -60,7 +60,7 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/btn_about_me"
+                android:id="@+id/btn_my_info_img"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/smile" />
@@ -73,6 +73,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_my_info_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="박인서"
