--- a/app/src/main/res/layout/toss_sending.xml
+++ b/app/src/main/res/layout/toss_sending.xml
@@ -130,7 +130,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/toss_send"
+        android:id="@+id/toss_send_layout"
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_alignParentBottom="true"
