--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,10 @@
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name = "android:windowBackground">@drawable/toss</item>
     </style>
+    
+    <style name="ThemeDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+    </style>
 
 </resources>
