--- a/app/src/main/res/layout/activity_time_line.xml
+++ b/app/src/main/res/layout/activity_time_line.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:background="@android:color/white"
         android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:layout_width="match_parent">
 
         <ImageButton
             android:id="@+id/imageButton7"
@@ -148,23 +149,22 @@
             android:id="@+id/rv_timeline_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timeline_linear_layout"
             app:layout_constraintBottom_toTopOf="@id/space_between_recycler_Linear"
-            tools:itemCount="3"
+            tools:itemCount="0"
             tools:listitem="@layout/timeline_item" />
 
-        <Space
+        <View
             android:id="@+id/space_between_recycler_Linear"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/rv_timeline_list"
             app:layout_constraintBottom_toTopOf="@id/toss_bottom_menu"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-
-            />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <LinearLayout
             android:id="@+id/toss_bottom_menu"
@@ -176,6 +176,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="bottom"
             android:baselineAligned="false">
 
             <LinearLayout
