--- a/app/src/main/res/layout/timeline_dialog_custom.xml
+++ b/app/src/main/res/layout/timeline_dialog_custom.xml
@@ -7,25 +7,42 @@
     android:layout_height="match_parent">
 
 
-    <Switch
-        android:id="@+id/dialog_switch"
-        android:layout_width="100dp"
+    <LinearLayout
+        android:id="@+id/dialog_checkBox"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="지출"
-        android:textSize="25sp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent">
+
+        <CheckBox
+            android:id="@+id/cb_dialog_expenditure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginHorizontal="15dp"
+            android:text="지출"/>
+
+        <CheckBox
+            android:id="@+id/cb_dialog_income"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:textSize="20sp"
+            android:text="수입"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/dialog_money"
         android:layout_width="300dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_switch"
+        app:layout_constraintTop_toBottomOf="@id/dialog_checkBox"
         >
 
         <TextView
@@ -55,6 +72,7 @@
         android:id="@+id/dialog_contents"
         android:layout_width="300dp"
         android:layout_height="0dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/dialog_money"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +99,7 @@
         android:id="@+id/dialog_time"
         android:layout_width="300dp"
         android:layout_height="0dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/dialog_contents"
         app:layout_constraintStart_toStartOf="parent"
