--- a/app/src/main/res/layout/toss_main_2.xml
+++ b/app/src/main/res/layout/toss_main_2.xml
@@ -103,19 +103,71 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="30dp"
             android:orientation="horizontal">
 
 
             <TextView
-                android:id="@+id/tv_result_window"
+                android:id="@+id/tv_result_window1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:maxLength="7"
                 android:maxLines="1"
                 android:text="0"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/tv_result_window2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:visibility="gone"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/tv_result_window3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:visibility="gone"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/tv_result_window4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:visibility="gone"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/tv_result_window5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:visibility="gone"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/tv_result_window6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:visibility="gone"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/tv_result_window7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:visibility="gone"
                 android:textSize="45sp" />
 
             <TextView
@@ -126,6 +178,15 @@
                 android:text="원"
                 android:textSize="45sp" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_warning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            android:layout_marginBottom="30dp"
+            android:text="최대 200만원까지 입력할 수 있습니다." />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -244,6 +305,7 @@
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:gravity="center"
+                        android:visibility="invisible"
                         android:text="취소"
                         android:textSize="25sp" />
 
@@ -266,6 +328,7 @@
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:gravity="center"
+                        android:visibility="invisible"
                         android:text="←"
                         android:textSize="40sp" />
 
