--- a/app/src/main/res/layout/activity_all_set.xml
+++ b/app/src/main/res/layout/activity_all_set.xml
@@ -158,7 +158,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="최근 방문"
+            android:text="카테고리"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -217,7 +217,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout6"
+            android:id="@+id/one_to_one_question"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -231,13 +231,13 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/question" />
+                android:src="@drawable/speech_bubble" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="행운퀴즈"
+                android:text="1:1 문의"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -252,7 +252,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+            app:layout_constraintTop_toBottomOf="@+id/one_to_one_question">
 
             <ImageView
                 android:layout_width="30dp"
