--- a/app/src/main/res/layout/activity_remittance_complete.xml
+++ b/app/src/main/res/layout/activity_remittance_complete.xml
@@ -7,20 +7,6 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <ImageButton
-        android:id="@+id/btn_back_to_send"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@android:color/transparent"
-        android:padding="5dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/arrowleft"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"/>
-
-
     <ImageView
         android:id="@+id/img_send_complete"
         android:layout_width="60dp"
@@ -134,11 +120,21 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:text="10원" />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_toss_account_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:text="원" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
