--- a/app/src/main/res/layout/toss_sending.xml
+++ b/app/src/main/res/layout/toss_sending.xml
@@ -168,12 +168,24 @@
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="6,400원"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/toss_money"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:text="원"/>
+                </LinearLayout>
+
 
             </LinearLayout>
 
